# todoget

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/: todoget.py
todoget/cmd/: cmd.py
todoget/main/: __init__.py  main.py
todoget/utils/: utils.py
todoget/wrt/: wrt.py
